# djangoSIGE

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  .tool-versions  .travis.yml  Dockerfile  LICENSE.md  Makefile  Pipfile  Procfile  README.md  bkp_.travis.yml  default.conf  docker-compose.yml  manage.py  pyproject.toml  requirements - Copia.txt  requirements.txt  requirements_test.txt  runtime.txt  setup.cfg  test_db_backup.json
djangosige-api/: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
djangosige-api/config/: settings.py  urls.py  wsgi.py
djangosige-api/djangosige/: middleware.py
djangosige-api/djangosige/apps/base/: urls.py
djangosige-api/djangosige/apps/cadastro/forms/: __init__.py  cliente.py  (+6 more)
djangosige-api/djangosige/apps/compras/: apps.py
djangosige-api/djangosige/apps/estoque/: apps.py  urls.py
djangosige-api/djangosige/apps/financeiro/: apps.py
djangosige-api/djangosige/apps/login/: forms.py  models.py  urls.py  views.py
djangosige-api/djangosige/contrib/swagger/: apps.py  views.py
djangosige-api/djangosige/static/css/: materialize.css
djangosige-api/djangosige/static/js/: jquery-ui.min.js  jquery.mask.js
djangosige-api/djangosige/templates/base/: datepicker_js.html  datetimepicker_js.html  form_error_alert.html  index.html  msg_error.html  msg_sucesso.html  search.html  title_header.html  tooltip_js.html
djangosige-api/djangosige/templates/cadastro/: obj_info.html  pessoa_add.html  pessoa_edit.html  pessoa_tab_list.html
djangosige-api/djangosige/templates/formset/: formset_fields_sem_padrao.html  formset_table.html  formset_tr_field.html
djangosige-api/djangosige/templates/login/: detalhe_users.html  editar_permissoes_user.html  esqueceu_senha.html  logo.html  selecionar_minha_empresa.html
djangosige-api/djangosige/templates/vendas/: venda_form.html  venda_jsblock.html
djangosige-api/djangosige/tests/: README.md  test_case.py  test_settings.py
djangosige-api/djangosige/tests/base/: test_views.py
djangosige-api/djangosige/tests/cadastro/: test_views.py
djangosige-api/djangosige/tests/compras/: test_views.py
djangosige-api/djangosige/tests/estoque/: test_models.py  test_views.py
djangosige-api/djangosige/tests/financeiro/: test_views.py
djangosige-api/djangosige/tests/fiscal/: test_views.py
djangosige-api/djangosige/tests/fixtures/: initial_user.json  test_db_backup.json
djangosige-api/djangosige/tests/login/: test_views.py
djangosige-api/djangosige/tests/vendas/: test_views.py
(+759 files in other folders)
